--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <webview id="foo" src="./1st.html" style="display:inline-block; width:320px; height:240px">...loading</webview>
 <p>str</p>
     <form>
-      <input type="button" id="btn1" value="CLICKHERE">
-      <input type="button" id="btnBack" value="<=">
-      <input type="button" id="btnFwd" value="=>">
-      <input type="button" id="btnPrnt" value="Print">
+      <input type="button" id="btn1" value="Change Collor!!">
+      <input type="button" id="btnPrnt" value="PDF Print!!">
     </form>
   </body>
 </html>
